<resources>
    <string name="app_name">Farm2Fork</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_nav_screen">MainNavScreen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="google_place_api">AIzaSyD7urTrfE4Yrovm_awNwt9k8WZ8xIvQtjQ</string>
    <string name="scheme_eligibility">Eligibility</string>
    <string name="scheme_benefits">Benefits</string>
    <string name="scheme_how_to_avail">How to Avail</string>
    <string name="scheme_other_details">Other Details</string>
    <string name="farm2fork">Farm2Fork</string>
    <string name="login_tag_line">Connecting farmers for effective farming</string>
    <string name="number_verification">Please enter your number to become a part of the Farm2Fork community. We shall send a verification code to verify it.</string>
    <string name="button_next"><![CDATA[Next >]]></string>
    <string name="otp_detect">Auto Detecting OTP. Please Wait</string>

    <string name="nav_profile">Profile</string>
    <string name="nav_crop_community">Crop Community</string>
    <string name="nav_agriculture_news">Agriculture news</string>
    <string name="nav_govt_schemes">Govt. Schemes</string>
    <string name="nav_about">About</string>
    <string name="nav_contact_us">Contact Us</string>
    <string name="title_activity_choose_locale">ChooseLocaleActivity</string>

    <string name="welcome">Welcome</string>
    <string name="details">Details</string>
    <string name="community">Crop Community</string>
    <string name="current_temp">Current Temp:</string>
    <string name="humidity">Humidity:</string>
    <string name="wind">Wind:</string>
    <string name="forecast">Forecast:</string>
    <string name="location">Location:</string>
    <string name="crop">Crop:</string>
    <string name="select_crop">Select Crop:</string>
    <string name="select_crop_name_hint">(crop name)</string>
    <string name="farm_location">Farm Location:</string>
    <string name="please_select_location_of_your_farm">(Please select Location of your Farm)</string>
    <string name="size">Size:</string>
    <string name="farm_photo_optional">Farm Photo: (optional)</string>
    <string name="add_farm"><![CDATA[ADD FARM >]]></string>
    <string name="add_farm_option">Add Farm</string>
    <string name="choose_image">Choose Image:</string>
    <string name="open_camera">Open Camera</string>
    <string name="gallery">Gallery</string>
    <string name="wind_unit">km/hr</string>
    <string name="state">State</string>
    <string name="prices_rs_quintal">Prices (Rs/Quintal)</string>
    <string name="mandi_name">Mandi Name</string>
    <string name="max">Max</string>
    <string name="min">Min</string>
    <string name="modal">Modal</string>
    <string name="city">City:</string>
    <string name="add_your_farm">Add your farm</string>
    <string name="title_activity_maps">Map</string>
    <string name="autocomplete_hint">Enter farm location or address</string>
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>

</resources>
