<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rectangle_round_corners_white"
    android:orientation="vertical"
    android:paddingBottom="2dp"
    android:paddingTop="2dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/choose_image"
        android:textColor="#212121"
        android:textSize="16dp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="#757575" />

    <TextView
        android:id="@+id/open_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/open_camera"
        android:textColor="#212121"
        android:textSize="16dp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="#757575" />

    <TextView
        android:id="@+id/open_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/gallery"
        android:textColor="#212121"
        android:textSize="16dp"
        android:textStyle="bold" />

</LinearLayout>