<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/crop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="8dp"
        android:text=""
        android:textColor="#212121"
        android:textSize="16dp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"

        android:background="#424242" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        android:paddingRight="8dp">


        <TextView
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/state"
            android:textColor="#212121"
            android:textSize="14dp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="180dp"

            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/prices_rs_quintal"
            android:textColor="#212121"
            android:textSize="14dp"
            android:textStyle="bold" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"

        android:background="#424242" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="8dp">


        <TextView
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/mandi_name"
            android:textColor="#212121"
            android:textSize="14dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/max"
            android:textColor="#212121"
            android:textSize="14dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/min"
            android:textColor="#212121"
            android:textSize="14dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/modal"
            android:textColor="#212121"
            android:textSize="14dp"
            android:textStyle="bold" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/farmrecycelrview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:clipToPadding="false"
            android:paddingBottom="2dp"

            android:paddingTop="2dp" />

        <TextView
            android:id="@+id/nopost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:text="Data not available! "
            android:textSize="16dp"
            android:visibility="invisible" />
    </RelativeLayout>


</LinearLayout>
