<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:text="Scheme"
        android:textColor="#f44336"
        android:textSize="18dp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"

        android:background="#424242" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">


            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"

                android:text="about"
                android:textColor="#626262"
                android:textSize="14dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/scheme_eligibility"
                android:textColor="#212121"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/eligibility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"

                android:text="about"
                android:textColor="#626262"
                android:textSize="14dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/scheme_benefits"
                android:textColor="#212121"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/benefits"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"

                android:text="about"
                android:textColor="#626262"
                android:textSize="14dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/scheme_how_to_avail"
                android:textColor="#212121"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/avail"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"

                android:text="about"
                android:textColor="#626262"
                android:textSize="14dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/scheme_other_details"
                android:textColor="#212121"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/otherdetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"

                android:text="about"
                android:textColor="#626262"
                android:textSize="14dp" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>