<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:theme="@style/AppTheme.AppBarOverlay">


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:cardBackgroundColor="#fff"
            app:cardCornerRadius="4dp"
            app:cardUseCompatPadding="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#fff"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">


                    <TextView

                        android:id="@+id/crop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="--------"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="24dp"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:background="#424242" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingTop="8dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="8dp">

                    <TextView
                        android:id="@+id/address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="marquee"
                        android:gravity="center"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:paddingLeft="4dp"
                        android:singleLine="true"
                        android:text="Lucknow"
                        android:textAppearance="@style/text_14.regular.secondary"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:background="#424242" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="140dp"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/currenttemp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center"
                            android:paddingLeft="8dp"
                            android:paddingTop="8dp"
                            android:paddingRight="8dp"

                            android:textAppearance="@style/text_14.light.secondary"
                            android:textSize="36dp"
                            tools:text="32" />

                    </LinearLayout>

                    <View
                        android:layout_width="0.7dp"
                        android:layout_height="match_parent"
                        android:background="#424242" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="8dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"

                            >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:paddingLeft="8dp"
                                android:paddingRight="8dp"

                                android:text="@string/humidity"
                                android:textColor="#212121"
                                android:textSize="16dp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/humidity"

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"


                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="16dp"
                                android:textStyle="bold" />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"

                            android:paddingTop="8dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:paddingLeft="8dp"
                                android:paddingRight="8dp"

                                android:text="@string/wind"
                                android:textColor="#212121"
                                android:textSize="16dp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/wind"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"


                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="16dp"
                                android:textStyle="bold" />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"

                            android:paddingTop="8dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:paddingLeft="8dp"
                                android:paddingRight="8dp"

                                android:text="@string/forecast"
                                android:textColor="#212121"
                                android:textSize="16dp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/forecast"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"


                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="16dp"
                                android:textStyle="bold" />


                        </LinearLayout>
                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>
        </android.support.v7.widget.CardView>
    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#fff"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"

        app:tabIndicatorHeight="4dp"
        app:tabMode="scrollable"
        app:tabSelectedTextColor="@color/colorPrimaryDark"
        app:tabTextColor="#424242" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_marginTop="44dp"
        android:background="#424242"

        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="45dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:tint="#fff"
        app:fabSize="mini"
        app:srcCompat="@android:drawable/ic_input_add" />

</android.support.design.widget.CoordinatorLayout>